src/objects/User.object
<CustomObject>
    <fields>
        <fullName>BES_VRM__Related_Contact_ID__c</fullName>
        <label>Related Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Code__c</fullName>
        <description>Project code assigned to the staff member (found on new user setup form).</description>
        <label>Project Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__County__c</fullName>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Geocode_Accuracy__c</fullName>
        <label>Geocode Accuracy</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Geocode_Address__c</fullName>
        <label>Geocode Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pexmaps__Geocode_Status__c</fullName>
        <label>Geocode Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pexmaps__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pexmaps__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>14</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__AllowMapAnythingExports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow MapAnything Exports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__DefaultProximityRadius__c</fullName>
        <label>Default Proximity Radius</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__EditMapAnythingOrgWirdeQueries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit MapAnything Org Wide Queries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MABetaTester__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MapAnything Beta Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLatitude__c</fullName>
        <label>MapAnything Default Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultLongitude__c</fullName>
        <label>MapAnything Default Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultType__c</fullName>
        <label>MADefaultType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__MADefaultZoomLevel__c</fullName>
        <label>MapAnything Default Zoom Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxExportSize__c</fullName>
        <label>MapAnything Max Export Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAMaxQuerySize__c</fullName>
        <label>MapAnything Max Query Size</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__MAVersion__c</fullName>
        <label>MapAnything Version</label>
        <picklist>
            <picklistValues>
                <fullName>Previous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sma__MapAnythingSettings__c</fullName>
        <label>Map Anything Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__PreferredTypeOfMeasurement__c</fullName>
        <label>Preferred Type of Measurement</label>
        <picklist>
            <picklistValues>
                <fullName>Miles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Km</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>sma__ReceiveBatchExceptionEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Batch Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>InactiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>